--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "scripts": {
-  "start": "nest start"
-},
+    "start": "nest start"
+  },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.6.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "dotenv": "^16.4.5",
+    "nodemailer": "^6.4.11",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
-    "typeorm": "^0.3.0",
-    "@nestjs-modules/mailer": "^1.6.0",
-    "nodemailer": "^6.4.11",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "typeorm": "^0.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
